<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/mediumGray"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:textSize="18sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:text="@string/inserimento_nuovo_elemento"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/nome_elemento"
            android:gravity="center"
            android:id="@+id/textView1"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/editTextInserisci"
            android:textColor="@color/white"
            android:textColorHint="@color/whiteHint"
            android:hint="@string/inserisci_qui"
            android:layout_marginTop="20dp"
            android:layout_width="285sp"
            android:layout_height="48dp"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <TextView
            android:text="@string/quantit"
            android:gravity="center"
            android:id="@+id/textView2"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/editTextQuantity"
            android:textColor="@color/white"
            android:textColorHint="@color/whiteHint"
            android:hint="@string/quantit"
            android:layout_marginTop="18dp"
            android:layout_width="285sp"
            android:layout_height="48dp"
            android:inputType="number"
            android:importantForAutofill="no"/>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnConferma"
                android:backgroundTint="@color/purple_700"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:text="@string/conferma"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnAnnulla"
                android:backgroundTint="#A4A4A4"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:text="@string/annulla"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>